# BinarySpacePartitioning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: test_case_1.txt  test_case_2.txt  test_case_3.txt
include/: BSPNode.h  Point.h  bsp_core.h  bsp_query.h  bsp_visualize.h  input_parser.h  mainwindow.h
src/: BSPNode.cpp  Point.cpp  bsp_core.cpp  bsp_query.cpp  bsp_visualize.cpp  input_parser.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
